--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "semantic-ui": "^2.4.2"
